--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -1067,7 +1067,7 @@ div.panel-pane div.node.boxed {
         margin: 0;
         top: -11px;
         background: white;
-        padding: 0 1em;
+        padding: 0 .2em;
         display: inline-block !important;
 
         &.ctools-collapsible-handle {
